initial setup and readme updated

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,11 +1,12 @@
 {% extends "theme.html" %}
-{% block title %}
-404
-{% endblock %}
-{% block heading %}
-404
-{% endblock %}
+
+{% block title %}this is the title {% endblock %}
+
+{% block heading %} 404 {% endblock %}
+
 {% block content %}
-<!--Better get used to this image-->
-<img src="../static/404.gif" style="max-height: 100%;max-width: 100%">
+
+<h1>this is the content of 404 file</h1>
+<p style="color: red;">we can write html code here</p>
+
 {% endblock %}
