--- a/templates/theme.html
+++ b/templates/theme.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+
     <title>{% block title %}{% endblock %}</title>
-    {%block meta%}{% endblock %}
+    
     <link rel="stylesheet" href="/static/css/theme.css" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -11,14 +12,17 @@
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet"> 
   </head>
 
-    <center><h2>{%block heading%}{% endblock %}</h2></center>
+    <center><h2 style="color: red;">{%block heading%}{% endblock %}</h2></center>
+    
     <div class="container">
       <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
           <center>
-            <div class="level" style="background-color: white; margin-left: 15%; margin-right: 15%; border-radius:20px">
+            <div class="level">
+    
                   {% block content %}{% endblock %}
+    
             </div>
           </center>
         </div>
