directory structure configured and signup functionality coded

--- a/templates/404.html
+++ b/templates/404.html
@@ -7,6 +7,6 @@
 {% block content %}
 
 <h1>this is the content of 404 file</h1>
-<p style="color: red;">we can write html code here</p>
+<p style="color: red;">{{error}}</p>
 
 {% endblock %}
