--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,19 @@
-{% extends "theme.html" %}
+<!DOCTYPE html>
+<html>
+<head>
+	 <meta charset="UTF-8">
+	 <link rel="stylesheet" href="../static/css/home.css">
+  <title>Constructure</title>
+  
+  
+</head>
 
-{% block title %}this is the home {% endblock %}
-
-{% block heading %} HOME {% endblock %}
-
-{% block content %}
-
-  THIS IS THE CONTENT OF HOME
-
-{% endblock %}
+<body>
+	<div class="opening">
+		
+	</div>
+	<div id="intro">
+	</div>
+<div class="next"><a href="login"><h1>Get Started</h1></a></div>
+</body>
+</html>
