--- a/templates/login.html
+++ b/templates/login.html
@@ -6,8 +6,8 @@
   
   
   <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Open+Sans:600'>
-
-      <link rel="stylesheet" href="css/style.css">
+  <script src='https://www.google.com/recaptcha/api.js'></script>
+  <link rel="stylesheet" href="../static/css/style.css">
 
   
 </head>
@@ -41,29 +41,32 @@
 				</div>
 			</div>
 			<div class="sign-up-htm">
+			<form action="/signup" method="POST">
 				<div class="group">
-					<label for="user" class="label">Username</label>
-					<input id="user" type="text" class="input">
+					<label for="user" class="label">Name</label>
+					<input id="user" type="text" class="input" name='inputName'>
 				</div>
 					<div class="group">
-					<label for="user" class="label">Registration No.</label>
-					<input id="regno" type="text" class="input">
+					<label for="user" class="label">Email Id</label>
+					<input id="regno" type="text" class="input" name='inputEmail'>
+				</div>
+				<div class="group">
+					<label for="pass" class="label">Registration Number</label>
+					<input id="pass" type="password" class="input" data-type="password" name='inputRegno'>
 				</div>
 				<div class="group">
 					<label for="pass" class="label">Password</label>
-					<input id="pass" type="password" class="input" data-type="password">
+					<input id="pass" type="password" class="input" data-type="password" name='inputPassword'>
 				</div>
 				<div class="group">
-					<label for="pass" class="label">Repeat Password</label>
-					<input id="pass" type="password" class="input" data-type="password">
+					<label for="pass" class="label">College</label>
+					<input id="pass" type="text" class="input" name='inputCollege'>
 				</div>
-				<div class="group">
-					<label for="pass" class="label">Email Address</label>
-					<input id="pass" type="text" class="input">
-				</div>
+				<!-- <div class="g-recaptcha" data-sitekey="6Le2lxoUAAAAAAn8ZAoymwmbDJKKkFu6gEC_IvGy"></div> -->
 				<div class="group">
 					<input type="submit" class="button" value="Sign Up">
 				</div>
+			</form>
 				<div class="hr"></div>
 				<div class="foot-lnk">
 					<label for="tab-1">Already Member?</a>
