frontend directory structure modified

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -4,7 +4,6 @@
 	<title>Constructure</title>
 </head>
 <body>
-<h1>Thank you for signing up.</h1>
-<p>I'll add login asap<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Bhawesh</p>
+<h1>{{msg}}</h1>
 </body>
 </html>
