--- a/templates/login.html
+++ b/templates/login.html
@@ -20,25 +20,23 @@
 		<input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
 		<div class="login-form">
 			<div class="sign-in-htm">
-			<form action="/login" method="POST">
 				<div class="group">
-					<label for="user" class="label">Email</label>
-					<input id="user" type="text" class="input" name="inputEmail">
+					<label for="user" class="label">Username</label>
+					<input id="user" type="text" class="input">
 				</div>
 				<div class="group">
 					<label for="pass" class="label">Password</label>
-					<input id="pass" type="password" class="input" data-type="password" name="inputPassword">
+					<input id="pass" type="password" class="input" data-type="password">
 				</div>
-				
 				<div class="group">
 					<input type="submit" class="button" value="Sign In">
 				</div>
+				<!-- <div class="g-recaptcha" data-sitekey="6Le2lxoUAAAAAAn8ZAoymwmbDJKKkFu6gEC_IvGy"></div> -->
 				<div class="hr"></div>
 				<div class="foot-lnk">
 					<a href="#forgot">Forgot Password?</a>
 				</div>
 			</div>
-			</form>
 			<div class="sign-up-htm">
 			<form action="/signup" method="POST">
 				<div class="group">
@@ -51,17 +49,21 @@
 				</div>
 				<div class="group">
 					<label for="pass" class="label">Registration Number</label>
-					<input id="pass" type="password" class="input" data-type="password" name='inputRegno'>
+					<input id="regno" type="text" class="input" name='inputRegno'>
 				</div>
 				<div class="group">
 					<label for="pass" class="label">Password</label>
 					<input id="pass" type="password" class="input" data-type="password" name='inputPassword'>
 				</div>
 				<div class="group">
+					<label for="phone" class="label">Contact Number</label>
+					<input id="phone" type="text" class="input" name='inputPhone'>
+				</div>
+				<div class="group">
 					<label for="pass" class="label">College</label>
 					<input id="pass" type="text" class="input" name='inputCollege'>
 				</div>
-				 <div class="g-recaptcha" data-sitekey="6Le2lxoUAAAAAAn8ZAoymwmbDJKKkFu6gEC_IvGy"></div>
+				<div class="g-recaptcha" data-sitekey="6Lf0jTEUAAAAAJd0vmXTZ21rfxsZv_SEzvsocte3"></div>
 				<div class="group">
 					<input type="submit" class="button" value="Sign Up">
 				</div>
@@ -75,7 +77,7 @@
 	</div>
 </div>
   	<video autoplay loop id="video-background" muted plays-inline>
-  <source src="../static/video/file.mp4" type="video/mp4">
+  <source src="video/file.mp4" type="video/mp4">
 </video>
   
 </body>
