--- a/templates/login.html
+++ b/templates/login.html
@@ -19,14 +19,15 @@
 		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
 		<input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
 		<div class="login-form">
+		<form action="/login" method="POST">
 			<div class="sign-in-htm">
 				<div class="group">
-					<label for="user" class="label">Username</label>
-					<input id="user" type="text" class="input">
+					<label for="user" class="label">Email</label>
+					<input id="user" type="text" class="input" name="inputEmail">
 				</div>
 				<div class="group">
 					<label for="pass" class="label">Password</label>
-					<input id="pass" type="password" class="input" data-type="password">
+					<input id="pass" type="password" class="input" name="inputPassword" data-type="password">
 				</div>
 				<div class="group">
 					<input type="submit" class="button" value="Sign In">
@@ -36,6 +37,7 @@
 				<div class="foot-lnk">
 					<a href="#forgot">Forgot Password?</a>
 				</div>
+			</form>
 			</div>
 			<div class="sign-up-htm">
 			<form action="/signup" method="POST">
@@ -63,7 +65,7 @@
 					<label for="pass" class="label">College</label>
 					<input id="pass" type="text" class="input" name='inputCollege'>
 				</div>
-				<div class="g-recaptcha" data-sitekey="6Lf0jTEUAAAAAJd0vmXTZ21rfxsZv_SEzvsocte3"></div>
+				<div class="g-recaptcha" data-sitekey="6Le2lxoUAAAAAAn8ZAoymwmbDJKKkFu6gEC_IvGy"></div>
 				<div class="group">
 					<input type="submit" class="button" value="Sign Up">
 				</div>
