theme applied and integrated dashboard and rules. session implemented

--- a/static/css/dash-style.css
+++ b/static/css/dash-style.css
@@ -42,6 +42,7 @@ Main Components
   position: relative;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
+  margin-top: -19px;
 }
 .projects-container::before {
   /* never visible - this is used in jQuery to check the current MQ */
