--- a/templates/rules.html
+++ b/templates/rules.html
@@ -1,28 +1,44 @@
-<!DOCTYPE html>
-<html lang="en" class="no-js">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Fullscreen Pageflip Layout with BookBlock</title>
-		<meta name="description" content="Fullscreen Pageflip Layout with BookBlock" />
-		<meta name="keywords" content="fullscreen pageflip, booklet, layout, bookblock, jquery plugin, flipboard layout, sidebar menu" />
-		<meta name="author" content="Codrops" />
-		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|Merriweather:400italic,400' rel='stylesheet' type='text/css'>
+{% extends "theme.html" %}
 
-		<link rel="shortcut icon" href="../favicon.ico"> 
-		<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="../static/css/rules-resetnav.css"> <!-- CSS reset -->
-		<link rel="stylesheet" href="../static/css/rules-stylenav.css"> <!-- Resource style -->
-		<script src="../static/js/rules-modernizrnav.js"></script> <!-- For Nav-->
-		<link rel="stylesheet" href="../static/css/rules-style.css">
-		<link rel="stylesheet" type="text/css" href="../static/css/rules-jquery.jscrollpane.custom.css" />
-		<link rel="stylesheet" type="text/css" href="../static/css/rules-bookblock.css" />
-		<link rel="stylesheet" type="text/css" href="../static/css/rules-custom.css" />
-		<script src="../static/js/rules-modernizr.custom.79639.js"></script>
-	</head>
-	<body>
-			<header>
+{% block title %}Rules{% endblock %}
+
+{% block font %}{% endblock %}
+
+{% block extStyle %}
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|Merriweather:400italic,400' rel='stylesheet' type='text/css'>
+	<link rel="shortcut icon" href="../favicon.ico"> 
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="../static/css/rules-resetnav.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="../static/css/rules-stylenav.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="../static/css/rules-style.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/rules-jquery.jscrollpane.custom.css" />
+	<link rel="stylesheet" type="text/css" href="../static/css/rules-bookblock.css" />
+	<link rel="stylesheet" type="text/css" href="../static/css/rules-custom.css" />
+{% endblock %}
+
+{% block extJS %}
+	<script src="../static/js/rules-modernizrnav.js"></script> <!-- For Nav-->
+	<script src="../static/js/rules-modernizr.custom.79639.js"></script>
+{% endblock %}
+
+{% block body %}
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand">Welcome {{name}}</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a href="/dashboard">Dashboard</a></li>
+      <li class="active"><a href="/rules">Rules</a></li>
+      <li><a href="#">Page 2</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
+  </div>
+</nav>
+<header>
 	<nav class="cd-stretchy-nav">
 		<a class="cd-nav-trigger" href="#0">
 			
@@ -30,9 +46,9 @@
 		</a>
 
 		<ul>
-			<li><a href="dashboard.html" ><span>Home</span></a></li>
-			<li><a href="Rules.html" class="active"><span>Rules</span></a></li>
-			<li><a href="login.html"><span>Logout</span></a></li>
+			<li><a href="/dashboard" ><span>Home</span></a></li>
+			<li><a href="/rules" class="active"><span>Rules</span></a></li>
+			<li><a href="/login"><span>Logout</span></a></li>
 			
 		</ul>
 
@@ -40,7 +56,7 @@
 	</nav>
 </header>
 		<div id="buttons">
-  			<a href="dashboard.html" class="btn orange">Proceed</a>
+  			<a href="/dashboard" class="btn orange">Proceed</a>
 		</div>
 		<div id="container" class="container">	
 			<div class="bb-custom-wrapper">
@@ -48,7 +64,7 @@
 					<div class="bb-item" id="item1">
 						<div class="content">
 							<div class="scroller">
-								<h2>Rules & Regulations</h2>
+								<h2>Rules &&amp; Regulations</h2>
 								<p>The Hon. Francis Gillette, in a speech in Hartford, Conn., in 1871, said
 								that there was "in Connecticut, on an average, one liquor shop to every
 								forty voters, and three to every Christian church. In this city, as stated
@@ -104,7 +120,7 @@
 					<div class="bb-item" id="item2">
 						<div class="content">
 							<div class="scroller">
-								<h2>Rules & Regulations</h2>
+								<h2>Rules &&amp; Regulations</h2>
 								<p>But few of the human race die of old age. Besides the thousand and one
 								diseases flesh is heir to, and the disease which Mrs. O'Flannagan said her
 								husband died of, viz., "Of a Saturday 'tis that poor Mike died," very many
@@ -149,7 +165,7 @@
 					<div class="bb-item" id="item3">
 						<div class="content">
 							<div class="scroller">
-								<h2>Rules & Regulations</h2>
+								<h2>Rules &&amp; Regulations</h2>
 								<p>The origin of the honeymoon is not generally known.</p>
 
 								<p>The Saxons long and long ago got up the delightful occasion. Amongst the
@@ -196,21 +212,22 @@
 				</nav>
 			</div>
 		</div><!-- /container -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script src="../static/js/rules-jquery.mousewheel.js"></script>
-		<script src="../static/js/rules-jquery.jscrollpane.min.js"></script>
-		<script src="../static/js/rules-jquerypp.custom.js"></script>
-		<script src="../static/js/rules-jquery.bookblock.js"></script>
-		<script src="../static/js/rules-page.js"></script>
-		<script>
-			$(function() {
+{% endblock %}
 
-				Page.init();
+{% block end_extJS %}
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="../static/js/rules-jquery.mousewheel.js"></script>
+	<script src="../static/js/rules-jquery.jscrollpane.min.js"></script>
+	<script src="../static/js/rules-jquerypp.custom.js"></script>
+	<script src="../static/js/rules-jquery.bookblock.js"></script>
+	<script src="../static/js/rules-page.js"></script>
+	<script>
+		$(function() {
 
-			});
-		</script>
-		<script src="../static/js/rules-jquery-2.1.4.js"></script>
-		<script src="../static/js/rules-mainnav.js"></script>
-	</body>
-</html>
+			Page.init();
 
+		});
+	</script>
+	<script src="../static/js/rules-jquery-2.1.4.js"></script>
+	<script src="../static/js/rules-mainnav.js"></script>
+{% endblock %}
