update, updateScore added

--- a/templates/theme.html
+++ b/templates/theme.html
@@ -25,11 +25,11 @@
 
 <!-- link font -->
 <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet"> 
-{% block extJS %}{% endblock %}
 <!-- end link font -->
 </head>
 
 <body>
   {% block body %}{% endblock %}  
+{% block end_extJS %}{% endblock %}
 </body>
 </html>
