--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "theme.html" %}
   
-{% block title %}Login{% endblock %}
+{% block title %}ERROR 404{% endblock %}
   
   {% block extJS %}
   <script src='https://www.google.com/recaptcha/api.js'></script>
@@ -11,6 +11,6 @@
 
 {% block body %}
 
-<p>{{msg}}</p>
+<p>{{error}}</p>
   
 {% endblock %}
