sql queris not working

--- a/templates/choice_R1.html
+++ b/templates/choice_R1.html
@@ -24,7 +24,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
-<body onload="available_options('1')">
+<body onload="available_options({{options}})">
 <script type="text/javascript">
   function available_options(op)
   {
