--- a/templates/choice_R1.html
+++ b/templates/choice_R1.html
@@ -64,7 +64,7 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <h1>Make Selection:</h1>
-        <p>The first choice you have to make is the basest of them all: The soil that makes up your plot of land. After the end of the first round, you have amassed  Gold Dragons. Use them to select a soil type from the choices below:
+        <p>The first choice you have to make is the basest of them all: The soil that makes up your plot of land. After the end of the first round, you have amassed {{money}} Gold Dragons. Use them to select a soil type from the choices below:
         </br>
         </br>
         Alluvial Soil: Alluvial soils are compressible when loaded. Deep alluvial soils influence the performance of land, infrastructure, and buildings during strong earthquakes in two profound ways. They amplify the shaking and seismic forces for some structures, while for others they reduce or de-amplify the shaking.
