--- a/templates/choice_R2.html
+++ b/templates/choice_R2.html
@@ -23,15 +23,16 @@
 
 <body onload="available_options({{options}})">
   <script type="text/javascript">
-  function available_options(options)
+  function available_options(op)
   {
-    switch(options)
+    op2 = parseInt(op)
+    switch(op2)
     {
+      // case 0:
+        // document.getElementById('check1').disabled = true;
       case 1:
-        document.getElementById('check1').disabled = true;
-      case 2:
         document.getElementById('check3').disabled = true;
-      case 3:
+      case 2:
         document.getElementById('check2').disabled = true;      
       default:
         return;
