--- a/templates/choice_R3_1.html
+++ b/templates/choice_R3_1.html
@@ -20,7 +20,25 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
-<body>
+<body onload="available_options({{options}})">
+  <script type="text/javascript">
+  function available_options(op)
+  {
+    op2 = parseInt(op);
+    switch(op2)
+    {
+      case 1:
+        document.getElementById('check3').disabled = true;
+      case 2:
+        document.getElementById('check2').disabled = true;
+      case 3:
+        document.getElementById('check1').disabled = true;
+      default:
+        return;
+    }
+
+  }
+</script>
   <header>
   <nav class="cd-stretchy-nav">
     <a class="cd-nav-trigger" href="#0">
@@ -42,7 +60,7 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <h1>Make Selection:</h1>
-        <p>Now, we choose one of the following methods for a Geo-Technical Engineer to test the land. After the end of the third round, you have amassed {{}} Gold Dragons. Use them to select a method from the choices below:
+        <p>Now, we choose one of the following methods for a Geo-Technical Engineer to test the land. After the end of the third round, you have amassed {{money}} Gold Dragons. Use them to select a method from the choices below:
         </br>
         </br>
         Test Pits: Test pits are much like you would expect. A pit is dug either manually or with an excavator in order to reveal the sub-surface conditions to the depth desired.
@@ -57,6 +75,8 @@
   </div>
 </section>
 <section id="works" class="works section no-padding">
+  <form action="/choice" method="POST">
+
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_3_1/work-1.jpg" alt="">
@@ -69,7 +89,7 @@
         <!-- overlay --> 
         </a> 
 <div class"selection">
-         <input type="checkbox" class="checkbox" id="check1" />
+         <input type="radio" name="pits" class="radio" id="check1" value = "TestPits"/>
        </div>  
 </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_3_1/work-2.jpg" alt="">
@@ -83,7 +103,7 @@
         </a> 
 
 <div class"selection">
-         <input type="checkbox" class="checkbox" id="check2" />
+         <input type="radio" name="pits" class="radio" id="check1" value = "Trenching"/>
        </div>  
 
       </div>
@@ -97,15 +117,18 @@
         </a> 
 
 <div class"selection">
-         <input type="checkbox" class="checkbox" id="check3" />
+         <input type="radio" name="pits" class="radio" id="check1" value = "InSituTesting"/>
        </div>  
 
       </div>
     </div>
   </div>
       <div id="buttons">
-        <a href="dashboard.html" class="btn orange">Proceed</a>
+        <!-- <a href="/dashboard.html" class="btn orange">Proceed</a> -->
+        <input type="submit" class ="btn orange" value="Finalize">
+
     </div>
+  </form>
 </section>
 <script src="../static/js/dash-jquery-2.1.4.js"></script>
 <script src="../static/js/dash-mainnav.js"></script>
