--- a/templates/choice_R3_2.html
+++ b/templates/choice_R3_2.html
@@ -21,7 +21,25 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
-<body>
+<body onload="available_options({{options}})">
+<script type="text/javascript">
+  function available_options(op)
+  {
+    op2 = parseInt(op);
+    switch(op2)
+    {
+      case 1:
+        document.getElementById('check3').disabled = true;
+      case 2:
+        document.getElementById('check2').disabled = true;
+      case 3:
+        document.getElementById('check1').disabled = true;
+      default:
+        return;
+    }
+
+  }
+</script>
   <header>
   <nav class="cd-stretchy-nav">
     <a class="cd-nav-trigger" href="#0">
@@ -43,7 +61,7 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <h1>Make Selection:</h1>
-        <p>We're also going to pick one of three potential surveyors. You have {{}} Gold Dragons left after paying the Geotechnical Engineer. Use them to select a surveyor from the choices below:
+        <p>We're also going to pick one of three potential surveyors. You have {{money}} Gold Dragons left after paying the Geotechnical Engineer. Use them to select a surveyor from the choices below:
         </br>
         </br>
         Surveyor A: She will use all the modern equipment like Electronic Distance Measurement (EDM), Total station providing utmost accuracy with better decision making, computing & data processing.
@@ -58,6 +76,8 @@
   </div>
 </section>
 <section id="works" class="works section no-padding">
+  <form action="/choice" method="POST">
+
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_3_2/work-1.jpg" alt="">
@@ -70,8 +90,9 @@
         <!-- overlay --> 
         </a> 
         <div class"selection">
-         <input type="checkbox" class="checkbox" id="check1" />
-       </div>  
+         <input type="radio" name="survey" class="radio" id="check1" value = "SurveyorA"/>
+         
+         </div>  
 
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_3_2/work-2.jpg" alt="">
@@ -84,7 +105,8 @@
         <!-- overlay --> 
         </a>
           <div class"selection">
-         <input type="checkbox" class="checkbox" id="check2" />
+         <input type="radio" name="survey" class="radio" id="check1" value = "SurveyorB"/>
+
        </div>  
 
          </div>
@@ -97,14 +119,17 @@
         </div>
         </a>
         <div class"selection">
-         <input type="checkbox" class="checkbox" id="check3" />
+         <input type="radio" name="survey" class="radio" id="check1" value = "SurveyorC"/>
+
        </div>  
 
          </div>
     </div>
   </div>
   <div id="buttons">
-        <a href="dashboard.html" class="btn orange">Proceed</a>
+        <!-- <a href="dashboard.html" class="btn orange">Proceed</a> -->
+        <input type="submit" class ="btn orange" value="Finalize">
+
     </div>
 </section>
 <script src="../static/js/dash-jquery-2.1.4.js"></script>
