--- a/templates/scenario_3.html
+++ b/templates/scenario_3.html
@@ -20,7 +20,25 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
-<body>
+<body onload="avaiable_options({{options}})">
+  <script type="text/javascript">
+  function available_options(op)
+  {
+    op2 = parseInt(op);
+    switch(op2)
+    {
+      case 1:
+        document.getElementById('check3').disabled = true;
+      case 2:
+        document.getElementById('check2').disabled = true;
+      case 3:
+        document.getElementById('check1').disabled = true;
+      default:
+        return;
+    }
+
+  }
+</script>
    <header>
   <nav class="cd-stretchy-nav">
     <a class="cd-nav-trigger" href="#0">
@@ -57,12 +75,13 @@
         Option 4: Leave the soil as it is, and risk it. 
           </br>
         </br>
-           <b>Money: {{%money%}}</b>
+           <b>Money: {{money}}</b>
         </p> 
     </div>
   </div>
 </section>
 <section id="works" class="works section no-padding">
+  <form action="/choice" method="POST">
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/scenario_3/work-1.jpg" alt="">
@@ -74,7 +93,8 @@
         </div>
         <!-- overlay --> 
         </a><div class"selection">
-         <input type="checkbox" class="checkbox" id="check1" />
+         <input type="radio" name="soilReport" class="radio" id="check1" value = "replace"/>
+
        </div> 
          </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box">  <img src="../static/image/scenario_3/work-2.jpg" alt="">
@@ -88,7 +108,9 @@
         </div>
         <!-- overlay --> 
         </a>  <div class"selection">
-         <input type="checkbox" class="checkbox" id="check2" />
+         <!-- <input type="checkbox" class="checkbox" id="check2" /> -->
+         <input type="radio" name="soilReport" class="radio" id="check1" value = "chemical"/>
+
        </div> 
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/scenario_3/work-3.jpg" alt="">
@@ -100,7 +122,9 @@
         </div>
         </a>
         <div class"selection">
-         <input type="checkbox" class="checkbox" id="check3" />
+         <!-- <input type="checkbox" class="checkbox" id="check3" /> -->
+         <input type="radio" name="soilReport" class="radio" id="check1" value = "compact"/>
+
        </div>  
       </div>
        <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/scenario_3/work-4.jpg" alt="">
@@ -112,13 +136,17 @@
         </div>
         </a>
         <div class"selection">
-         <input type="checkbox" class="checkbox" id="check4" />
+         <!-- <input type="checkbox" class="checkbox" id="check4" /> -->
+         <input type="radio" name="soilReport" class="radio" id="check1" value = "nothing"/>
+
        </div> 
       </div>
     </div>
   </div>
 <div id="buttons">
-        <a href="dashboard.html" class="btn orange">Proceed</a>
+        <!-- <a href="dashboard.html" class="btn orange">Proceed</a> -->
+        <input type="submit" class ="btn orange" value="Finalize">
+
     </div>
 </section>
 
