--- a/templates/scenario_4_2.html
+++ b/templates/scenario_4_2.html
@@ -49,7 +49,7 @@
     </div>
   </div>
   <div id="buttons">
-        <a href="dashboard.html" class="btn orange">Proceed</a>
+        <a href="/dashboard" class="btn orange">Proceed</a>
     </div>
 </section>
 <script src="../static/js/dash-jquery-2.1.4.js"></script>
