--- a/templates/choice_R4.html
+++ b/templates/choice_R4.html
@@ -21,7 +21,27 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
-<body>
+<body onload="available_options({{options}})">
+  <script type="text/javascript">
+  function available_options(op)
+  {
+    op2 = parseInt(op)
+    switch(op2)
+    {
+      case 0:
+        document.getElementById('check3').disabled = true;
+      case 1:
+        document.getElementById('check2').disabled = true;
+      case 2:
+        document.getElementById('check1').disabled = true;      
+      case 3:
+        document.getElementById('check4').disabled = true;      
+      default:
+        return;
+    }
+
+  }
+</script>
 
   <header>
   <nav class="cd-stretchy-nav">
@@ -44,11 +64,13 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <h1>Make Selection:</h1>
-        <p>Here you have to hire your labour and lease machinery on rent. After the end of the third round, you have amassed {{}} Gold Dragons. Use them to select the machinery from the following options:</p> 
+        <p>Here you have to hire your labour and lease machinery on rent. After the end of the third round, you have amassed {{money}} Gold Dragons. Use them to select the machinery from the following options:</p> 
     </div>
   </div>
 </section>
 <section id="works" class="works section no-padding">
+  <form action="/choice" method="POST">
+
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_4/work-1.jpg" alt="">
@@ -62,7 +84,8 @@
         </a> 
 
 <div class"selection">
-         <input type="checkbox" class="checkbox" id="check1" />
+         <input type="radio" name="machine" class="radio" id="check1" value = "modern"/>
+
        </div>  
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_4/work-2.jpg" alt="">
@@ -76,7 +99,7 @@
         </a> 
 
 <div class"selection">
-         <input type="checkbox" class="checkbox" id="check2" />
+         <input type="radio" name="machine" class="radio" id="check2" value = "medium"/>
        </div>  
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_4/work-3.jpg" alt="">
@@ -88,7 +111,7 @@
         </div>
         </a>
         <div class"selection">
-         <input type="checkbox" class="checkbox" id="check3" />
+         <input type="radio" name="machine" class="radio" id="check3" value = "wretched"/>
        </div>  
          </div>
        <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_4/work-4.jpg" alt="">
@@ -101,15 +124,16 @@
         </a>
 
 <div class"selection">
-         <input type="checkbox" class="checkbox" id="check4" />
+         <input type="radio" name="machine" class="radio" id="check4" value = "contract"/>
        </div>  
          </div>
     </div>
   </div>
 
        <div id="buttons">
-        <a href="dashboard.html" class="btn orange">Proceed</a>
+        <input type="submit" class ="btn orange" value="Finalize">
     </div>
+  </form>
 </section>
 <script src="../static/js/dash-jquery-2.1.4.js"></script>
 <script src="../static/js/dash-mainnav.js"></script>
