--- a/static/css/checkbox-button.css
+++ b/static/css/checkbox-button.css
@@ -1,12 +1,19 @@
-.checkbox{
+.radio{
 	position: absolute;
 	top:70%;
 	right: 45%;
 	z-index: 2000;
-	width:10%;
-	height: 10%;
+	width:5%;
+	height: 5%;
 }
-
+.checkbox{
+  position: absolute;
+  top:70%;
+  right: 45%;
+  z-index: 2000;
+  width:5%;
+  height: 5%;
+}
 /* header/copyright link */
 .link {
   text-decoration: none;
