--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	 <meta charset="UTF-8">
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <link rel="stylesheet" href="../static/css/home.css">
+
   <title>Constructure</title>
   
   
@@ -13,7 +15,13 @@
 		
 	</div>
 	<div id="intro">
+		<p><a href="https://goo.gl/forms/tgIy2H40keO4EmUD3" class="link">Click Here To Know More About These Events</a> <p>
 	</div>
-<div class="next"><a href="login"><h1>Get Started</h1></a></div>
+<div class="next">
+  			<a href="login.html" class="btn orange">
+  				Begin Your Watch
+  			</a>
+		</div>
+	
 </body>
 </html>
