--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,7 +20,7 @@ a{color:inherit;text-decoration:none}
 }
 .login-html{
 	width:100%;
-	height:100%;
+	height:130%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
 	background:rgba(40,57,101,.9);
@@ -84,6 +84,7 @@ a{color:inherit;text-decoration:none}
 .login-form .group .button{
 	border:none;
 	padding:15px 20px;
+	margin-top: 2px;
 	border-radius:25px;
 	background:rgba(255,255,255,.1);
 }
@@ -93,7 +94,7 @@ a{color:inherit;text-decoration:none}
 }
 .login-form .group .label{
 	color:#aaa;
-	font-size:12px;
+	font-size:14px;
 }
 .login-form .group .button{
 	background:#1161ee;
@@ -151,7 +152,10 @@ a{color:inherit;text-decoration:none}
 	-webkit-transform:rotate(0);
 	        transform:rotate(0);
 }
-
+.g-recaptcha{
+	margin-left: 50px;
+	margin-bottom: 10px;
+}
 .hr{
 	height:2px;
 	margin:60px 0 50px 0;
@@ -159,6 +163,7 @@ a{color:inherit;text-decoration:none}
 }
 .foot-lnk{
 	text-align:center;
+	color: #fff;
 }
 video {
   position: fixed;
